2009-11-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5140(f): new layout of statistic module
	* bug #5186(f): register autoload for TYPO3 4.3 

2009-11-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #4682(f): documentation is updated
	* bug #4520(f): cmd_stats_postProcess hook expects the hook implementation to return the output. It won't be just adding hook's output to current output.
	* bug #5245(f): Language class should only be included once (in dmailer class)
	* bug #4767(f): additional test subject works only on smtp sending. Additional test subject is added in setHeader function.  
	  
2009-10-20 Ivan Kartolo <ivan.kartolo@dkd.de>
	* feature #4791 (f): added support for the coming scheduler in TYPO3 4.3 

2009-10-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed bug #5004 (forge): only listed sysfolder.

2009-09-17 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed typo in marker substitution hook
	* fixed bug #4222 (forge): added configuration always to fetch through http, although BE is on SSL (thanks to Ingo Schmitt)

2009-09-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* fixed bug #11809 (bugs): category labels need to be passed through htmlspecialchars.
	* fixed bug #3201 (forge): user edit link in statistic module is not functioning. 
	* updated documentation
	
2009-08-27 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #4365(forge): Filter the sysfolder, which the user has as import destination (thanks to Robert Heel)

2009-08-22 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed Bug #4304(forge): wrong charset detection if selecting external page as source

2009-08-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* New Feature #3896(forge): added new field (module_sys_dmail_newsletter) in fe_user table to en-/disable newsletter without deleting the user (thanks to Sonja Scholz <ss@cabag.ch> for implementing this)
	* New feature #3896(forge): recipient list is also updated to only show fe_user which has module_sys_dmail_newsletter flag
	
2009-08-5 Ivan Kartolo <ivan.kartolo@dkd.de>