@@ -1,6 +1,7 @@
 2009-11-10 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* bug #5140(f): new layout of statistic module
-	* bug #5186(f): register autoload for TYPO3 4.3 
+	* bug #5186(f): register autoload for TYPO3 4.3
+	* bug #5304(f): added title param to link of the newsletter in statistic module 
 
 2009-11-05 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* bug #4682(f): documentation is updated
